--- a/vg2/examples/cookies.html
+++ b/vg2/examples/cookies.html
@@ -18,7 +18,7 @@
 					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
-			<div class="links">
+			<div class="links" id="myTopnav">
 				<span class="nav-item">
 					<a href="/index.html">Heim</a>
 				</span>
@@ -48,7 +48,9 @@
 				<span class="nav-item">
 					<a href="/about.html">Om oss</a>
 				</span>
-
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				</a>
 			</div>
 		</div>
 	</div>
