--- a/vg2/examples/database.html
+++ b/vg2/examples/database.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/resources/css/subject.css">
     <link rel="stylesheet" href="/resources/css/exercises.css">
     <link rel="stylesheet" href="/resources/css/examples.css">
-    
 </head>
 
 <body>
@@ -21,7 +20,7 @@
 					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
-			<div class="links">
+			<div class="links" id="myTopnav">
 				<span class="nav-item">
 					<a href="/index.html">Heim</a>
 				</span>
@@ -51,7 +50,9 @@
 				<span class="nav-item">
 					<a href="/about.html">Om oss</a>
 				</span>
-
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -211,7 +212,7 @@
         <p>&#169; <span id="year"></span> Stine Jonassen Føyen </p>
     </footer>
 
-    <script type="text/javascript" src="../resources/js/year.js"></script>
+    <script type="text/javascript" src="/resources/js/year.js"></script>
 </body>
 
 </html>
