--- a/vg2/examples/versioncontrol.html
+++ b/vg2/examples/versioncontrol.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Heim</title>
+    <title>Versjonskontroll</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/resources/css/main.css">
     <link rel="stylesheet" href="/resources/css/subject.css">
     <link rel="stylesheet" href="/resources/css/exercises.css">
@@ -19,7 +20,7 @@
 					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
-			<div class="links">
+			<div class="links" id="myTopnav">
 				<span class="nav-item">
 					<a href="/index.html">Heim</a>
 				</span>
@@ -49,7 +50,9 @@
 				<span class="nav-item">
 					<a href="/about.html">Om oss</a>
 				</span>
-
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				</a>
 			</div>
 		</div>
 	</div>
