--- a/vg2/index.html
+++ b/vg2/index.html
@@ -19,7 +19,8 @@
 					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
-			<div class="links">
+			<div class="links" id="myTopnav">
+
 				<span class="nav-item">
 					<a href="/index.html">Heim</a>
 				</span>
@@ -30,7 +31,7 @@
 					<i class="fa fa-caret-down"></i>
 					<div class="dropdown-content">
 						<a href="/vg2/web.html">HTML / CSS / JS</a>
-						<a href="#">C#</a>
+						<a href="#">C# </a>
 						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
 							target="_blank">Python</a>
 						<a href="/vg2/examples/database.html">Databasar</a>
@@ -39,7 +40,7 @@
 						<a href="/vg2/examples/cookies.html">Cookies</a>
 						<a href="/vg2/examples/environment.html">Utviklingsmiljø</a>
 						<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
-							target="_blank">Dokumentasjon</a>
+							target="_blank">Dokumentasjon </a>
 						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
 							target="_blank">Universell utforming</a>
 						<a href="/vg2/examples/versioncontrol.html">Versjonskontroll</a>
@@ -50,11 +51,16 @@
 					<a href="/about.html">Om oss</a>
 				</span>
 
+				<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				</a>
+
 			</div>
 		</div>
 	</div>
 	<main>
 		<h1 class="subjectHeader">Vg2 Utvikling</h1>
+
 		<div>
 			<div class="grid-container">
 				<div>
@@ -74,6 +80,7 @@
 								target="_blank">
 								<div class="grid-box">
 									Python
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="/vg2/examples/database.html">
@@ -85,6 +92,7 @@
 								target="_blank">
 								<div class="grid-box">
 									Personvern
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="/vg2/examples/cookies.html">
@@ -101,12 +109,14 @@
 								target="_blank">
 								<div class="grid-box">
 									Dokumentasjon
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
 								target="_blank">
 								<div class="grid-box">
 									Universell utforming
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="/vg2/examples/versioncontrol.html">
@@ -117,70 +127,114 @@
 						</div>
 					</div>
 					<div class="subheader task-grid">
-						<div class="blue-box">
-							<h2>Innleveringer</h2>
-							<ul class="exer">
-								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EQE1j2wDCvNJtTDbTbe-7IABpPRRTppxrp37QISC1APhjg?e=YczkMx"
-										target="_blank">01 - Databasar
-									</a>
-								</li>
-								<hr />
-								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EQ9-y9NBC91OsY5Huq2_UmoBC0bxOPR7TkhwxYEEz7qCQA?e=aDvFEV"
-										target="_blank">02 - Webapplikasjonar og databasar
-									</a>
-								</li>
-								<hr />
-								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EbULk8Sv7CRJtMvAIEjrOBIBSmQiYtD0zEBSHpSOw7mTwQ?e=6ygSm9"
-										target="_blank"> 03 - Power Apps
-									</a>
-								</li>
-								<hr />
-								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EfVqivNggQtAlIr_DMqCWVwBEfvLlk4RMxWxlI2Pmg-VXA?e=PBdcwj"
-										target="_blank">04 - Spel
-									</a>
-								</li>
-								<hr />
-								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EfxZH9BkgRxBgOsneDSuRoIBDxIr130rT2iwT-tvY4bYoQ?e=grlpEh"
-										target="_blank">05 - Gruppeoppgåve - Digitale truslar
-									</a>
-								</li>
-								<hr />
-								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ESofSXzcMGlBi15i8jskX0kBP38mooTOuqpqizeTnKb15Q?e=8SCnIC"
-										target="_blank"> 06 - IM Chat
-									</a>
-								</li>
-							</ul>
-						</div>
-						<div class="blue-box">
-							<h2>Øvingsoppgåver</h2>
-							<ul class="exer">
-								<li>
-									<a href="/vg1/exercises/ex1.html">Øving JavaScript</a>
-								</li>
-								<hr />
-
-								<li>
-									<a
-										href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e08eecc8-5e7e-4b85-9876-dfc5d1f3d920/resource:113f0fc7-8d03-4564-b94c-5282ec374929">Øving
-										JavaScript - NDLA</a>
-								</li>
-								<hr />
-								<li>
-									<a
-										href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/">Øving
-										Python</a>
-								</li>
-							</ul>
-
-
+						<div>
+							<div class="blue-box">
+								<h2>Kompetansemål</h2>
+								<ul>
+									<li>
+										vurdere fordeler og ulemper ved ulike programmeringsspråk og velge og anvende
+										relevante programmeringsspråk og algoritmer i eget arbeid
+									</li>
+									<li>
+										lage og begrunne funksjonelle krav til en IT-løsning basert på behovskartlegging
+									</li>
+									<li>
+										vurdere brukergrensesnitt til IT-tjenester og designe tjenester som er tilpasset
+										brukernes behov
+									</li>
+									<li>
+										gjøre rede for hensikten med teknisk dokumentasjon og utarbeide teknisk
+										dokumentasjon for IT-løsninger
+									</li>
+									<li>
+										beskrive og anvende relevante versjonskontrollsystemer i utviklingsprosjekter
+									</li>
+									<li>
+										designe og implementere IT-tjenester med innebygget personvern
+									</li>
+									<li>
+										analysere digitale trusler, verdier og sårbarheter og utvikle applikasjoner med
+										innebygget sikkerhet
+									</li>
+									<li>
+										anvende relevant testmiljø og utføre testing tilpasset IT-løsningen som utvikles
+									</li>
+									<li>
+										modellere og opprette databaser for informasjonsflyt i systemer
+									</li>
+									<li>
+										beskrive ulike datalagringsmodeller og metoder for å hente ut og sette inn
+										bestemte data fra databaser som brukes av andre systemer
+									</li>
+								</ul>
+							</div>
 						</div>
 
+						<div>
+							<div class="blue-box">
+								<h2>Innleveringer</h2>
+								<ul class="exer">
+									<li>
+										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EQE1j2wDCvNJtTDbTbe-7IABpPRRTppxrp37QISC1APhjg?e=YczkMx"
+											target="_blank">01 - Databasar
+										</a>
+									</li>
+									<hr />
+									<li>
+										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EQ9-y9NBC91OsY5Huq2_UmoBC0bxOPR7TkhwxYEEz7qCQA?e=aDvFEV"
+											target="_blank">02 - Webapplikasjonar og databasar
+										</a>
+									</li>
+									<hr />
+									<li>
+										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EbULk8Sv7CRJtMvAIEjrOBIBSmQiYtD0zEBSHpSOw7mTwQ?e=6ygSm9"
+											target="_blank"> 03 - Power Apps
+										</a>
+									</li>
+									<hr />
+									<li>
+										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EfVqivNggQtAlIr_DMqCWVwBEfvLlk4RMxWxlI2Pmg-VXA?e=PBdcwj"
+											target="_blank">04 - Spel
+										</a>
+									</li>
+									<hr />
+									<li>
+										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EfxZH9BkgRxBgOsneDSuRoIBDxIr130rT2iwT-tvY4bYoQ?e=grlpEh"
+											target="_blank">05 - Gruppeoppgåve - Digitale truslar
+										</a>
+									</li>
+									<hr />
+									<li>
+										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ESofSXzcMGlBi15i8jskX0kBP38mooTOuqpqizeTnKb15Q?e=8SCnIC"
+											target="_blank"> 06 - IM Chat
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="blue-box">
+								<h2>Øvingsoppgåver</h2>
+								<ul class="exer">
+									<li>
+										<a href="/vg1/exercises/ex1.html">Øving JavaScript</a>
+									</li>
+									<hr />
+
+									<li>
+										<a
+											href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e08eecc8-5e7e-4b85-9876-dfc5d1f3d920/resource:113f0fc7-8d03-4564-b94c-5282ec374929">Øving
+											JavaScript - NDLA</a>
+									</li>
+									<hr />
+									<li>
+										<a
+											href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/">Øving
+											Python</a>
+									</li>
+								</ul>
+
+
+							</div>
+						</div>
 					</div>
 				</div>
 				<div>
