--- a/vg1/examples/css.html
+++ b/vg1/examples/css.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Heim</title>
+	<title>CSS</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../../resources/css/main.css">
 	<link rel="stylesheet" href="../../resources/css/examples.css">
 	<style>
@@ -33,7 +34,7 @@
 					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
-			<div class="links">
+			<div class="links" id="myTopnav">
 				<span class="nav-item">
 					<a href="/index.html">Heim</a>
 				</span>
@@ -63,7 +64,9 @@
 				<span class="nav-item">
 					<a href="/about.html">Om oss</a>
 				</span>
-
+				<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -73,8 +76,7 @@
 			<div class="grid-container">
 				<div class="quick-links">
 					<div class="shortcuts">
-						<a href="/index.html">Framside</a> > <a href="/index.html">Vg1</a> > <a
-							class="active">CSS</a>
+						<a href="/index.html">Framside</a> > <a href="/index.html">Vg1</a> > <a class="active">CSS</a>
 					</div>
 					<ul>
 						<li>
@@ -242,28 +244,13 @@
 					</div>
 
 				</div>
-				<div class="links">
-
-				</div>
 			</div>
 		</main>
 	</div>
 	<footer>
 		<p>&#169; <span id="year"></span> Stine Jonassen Føyen </p>
 	</footer>
-
 	<script type="text/javascript" src="../../resources/js/year.js"></script>
-
-
-
-	</div>
-	</main>
-
-	<footer>
-		<p>&#169; 2021 Stine Jonassen Føyen </p>
-	</footer>
-
-	<script type="text/javascript" src="../../resources/js/bootstrap/bootstrap.min.js"></script>
 </body>
 
 </html>
