--- a/vg1/examples/environment.html
+++ b/vg1/examples/environment.html
@@ -4,63 +4,63 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Heim</title>
-	<link rel="stylesheet" href="../../resources/css/main.css">
-	<link rel="stylesheet" href="../../resources/css/examples.css">
+	<title>Utviklingsmiljø</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/resources/css/main.css">
+	<link rel="stylesheet" href="/resources/css/examples.css">
 </head>
 
 <body>
-	<div>
-		<div class="navigation">
-			<div class="logo">
-				<span class="nav-item" id="logo">
-					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
-				</span>
-			</div>
-			<div class="links">
-				<span class="nav-item">
-					<a href="/index.html">Heim</a>
-				</span>
-				<span class="nav-item">
-					<a href="/vg1/index.html">Vg1</a>
-				</span>
-				<span class="nav-item dropdown"><a href="/vg2/index.html">Vg2</a>
-					<i class="fa fa-caret-down"></i>
-					<div class="dropdown-content">
-						<a href="/vg2/web.html">HTML / CSS / JS</a>
-						<a href="#">C#</a>
-						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
-							target="_blank">Python</a>
-						<a href="/vg2/examples/database.html">Databasar</a>
-						<a href="https://ndla.no/subject:f41eadfa-0749-4ab4-bc17-a500adad38b8/topic:b560d9d8-e4b1-4f28-b171-9febe1b3c42e/"
-							target="_blank">Personvern</a>
-						<a href="/vg2/examples/cookies.html">Cookies</a>
-						<a href="/vg2/examples/environment.html">Utviklingsmiljø</a>
-						<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
-							target="_blank">Dokumentasjon</a>
-						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
-							target="_blank">Universell utforming</a>
-						<a href="/vg2/examples/versioncontrol.html">Versjonskontroll</a>
-					</div>
-				</span>
-				</span>
-				<span class="nav-item">
-					<a href="/about.html">Om oss</a>
-				</span>
-
-			</div>
+	<div class="navigation">
+		<div class="logo">
+			<span class="nav-item" id="logo">
+				<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
+			</span>
+		</div>
+		<div class="links" id="myTopnav">
+			<span class="nav-item">
+				<a href="/index.html">Heim</a>
+			</span>
+			<span class="nav-item">
+				<a href="/vg1/index.html">Vg1</a>
+			</span>
+			<span class="nav-item dropdown"><a href="/vg2/index.html">Vg2</a>
+				<i class="fa fa-caret-down"></i>
+				<div class="dropdown-content">
+					<a href="/vg2/web.html">HTML / CSS / JS</a>
+					<a href="#">C#</a>
+					<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
+						target="_blank">Python</a>
+					<a href="/vg2/examples/database.html">Databasar</a>
+					<a href="https://ndla.no/subject:f41eadfa-0749-4ab4-bc17-a500adad38b8/topic:b560d9d8-e4b1-4f28-b171-9febe1b3c42e/"
+						target="_blank">Personvern</a>
+					<a href="/vg2/examples/cookies.html">Cookies</a>
+					<a href="/vg2/examples/environment.html">Utviklingsmiljø</a>
+					<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
+						target="_blank">Dokumentasjon</a>
+					<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
+						target="_blank">Universell utforming</a>
+					<a href="/vg2/examples/versioncontrol.html">Versjonskontroll</a>
+				</div>
+			</span>
+			</span>
+			<span class="nav-item">
+				<a href="/about.html">Om oss</a>
+			</span>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				<i class="fa fa-bars"></i>
+			</a>
 		</div>
 	</div>
 	<div class="main-content">
-		
 		<main>
 
 			<div class="grid-container-nolinks">
-				
+
 				<div class="grid-content">
 					<div class="quick-links-not-fixed">
 						<div class="shortcuts">
-							<a href="/index.html">Framside</a> > <a href="/vg2/index.html">Vg2</a> > <a>Databasar</a>
+							<a href="/index.html">Framside</a> > <a href="/vg1/index.html">Vg1</a> > Utviklingsmiljø
 						</div>
 					</div>
 					<h1>Utviklingsmiljø</h1>
@@ -69,44 +69,44 @@
 							<h1>Kva treng eg?</h1>
 						</div>
 						<div class="subjectBox">
-                            <ul>
-                                <li>
-                                    <h2>Visual Studio Code</h2>
-                                </li>
-                                <li>
-                                    <h2>Live Server extension i VS Code</h2>
-                                </li>
-                                <li>
-                                    <h2>Git</h2>
-                                </li>
-                            </ul>
+							<ul>
+								<li>
+									<h2>Visual Studio Code</h2>
+								</li>
+								<li>
+									<h2>Live Server extension i VS Code</h2>
+								</li>
+								<li>
+									<h2>Git</h2>
+								</li>
+							</ul>
 						</div>
 					</div>
-                    <div class="subject" id="variables">
+					<div class="subject" id="variables">
 						<div class="subjectTitle">
 							<h1>Kva må eg gjere?</h1>
 						</div>
 						<div class="subjectBox">
-                            <ul>
-                                <li>
-                                    <h2>Installer Visual Studio Code</h2>
-                                </li>
-                                <li>
-                                    <h2>Installer Live Server extension i VS Code</h2>
-                                </li>
-                                <li>
-                                    <h2>Installer Git</h2>
-                                </li>
-                                <li>
-                                    <h2>Installer Github desktop</h2>
-                                </li>
-                                <li>
-                                    <h2>Opprett bruker på Github eller logg deg inn med skulebrukaren din</h2>
-                                </li>
-                                <li>
-                                    <h2>Opprett bruker på Github</h2>
-                                </li>
-                            </ul>
+							<ul>
+								<li>
+									<h2>Installer Visual Studio Code</h2>
+								</li>
+								<li>
+									<h2>Installer Live Server extension i VS Code</h2>
+								</li>
+								<li>
+									<h2>Installer Git</h2>
+								</li>
+								<li>
+									<h2>Installer Github desktop</h2>
+								</li>
+								<li>
+									<h2>Opprett bruker på Github eller logg deg inn med skulebrukaren din</h2>
+								</li>
+								<li>
+									<h2>Opprett bruker på Github</h2>
+								</li>
+							</ul>
 						</div>
 					</div>
 				</div>
