--- a/vg1/index.html
+++ b/vg1/index.html
@@ -19,7 +19,7 @@
 					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
-			<div class="links">
+			<div class="links" id="myTopnav">
 				<span class="nav-item">
 					<a href="/index.html">Heim</a>
 				</span>
@@ -49,7 +49,9 @@
 				<span class="nav-item">
 					<a href="/about.html">Om oss</a>
 				</span>
-
+				<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -250,7 +252,7 @@
 		<p>&#169; <span id="year"></span> Stine Jonassen Føyen </p>
 	</footer>
 
-	<script type="text/javascript" src="../resources/js/year.js"></script>
+	<script type="text/javascript" src="/resources/js/year.js"></script>
 </body>
 
 </html>
