--- a/vg2/examples/cookieexample.html
+++ b/vg2/examples/cookieexample.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Example</title>
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../../resources/css/main.css">
   <link rel="stylesheet" href="../../resources/css/examples.css">
@@ -111,7 +112,7 @@
           <a id="logo" href="../index.html"><img src="../resources/images/im_logo_ligg_sv_invert2.png"></a>
         </span>
       </div>
-      <div class="links">
+      <div class="links" id="myTopnav">
         <span class="nav-item">
           <a href="../index.html">Heim</a>
         </span>
@@ -141,7 +142,9 @@
         <span class="nav-item">
           <a href="../about.html">Om oss</a>
         </span>
-
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				</a>
       </div>
     </div>
   </div>
