--- a/vg2/examples/environment.html
+++ b/vg2/examples/environment.html
@@ -4,9 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Heim</title>
-	<link rel="stylesheet" href="../../resources/css/main.css">
-	<link rel="stylesheet" href="../../resources/css/examples.css">
+	<title>Utviklingsmiljø</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/resources/css/main.css">
+	<link rel="stylesheet" href="/resources/css/examples.css">
+
 </head>
 
 <body>
@@ -17,7 +19,7 @@
 					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
-			<div class="links">
+			<div class="links" id="myTopnav">
 				<span class="nav-item">
 					<a href="/index.html">Heim</a>
 				</span>
@@ -47,7 +49,9 @@
 				<span class="nav-item">
 					<a href="/about.html">Om oss</a>
 				</span>
-
+				<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -119,7 +123,7 @@
 		<p>&#169; <span id="year"></span> Stine Jonassen Føyen </p>
 	</footer>
 
-	<script type="text/javascript" src="../../resources/js/year.js"></script>
+	<script type="text/javascript" src="/resources/js/year.js"></script>
 </body>
 
 </html>
