fixed link and added icon

--- a/vg1/index.html
+++ b/vg1/index.html
@@ -83,6 +83,7 @@
 								target="_blank">
 								<div class="grid-box">
 									Programmering
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="https://make.powerapps.com">
@@ -94,24 +95,28 @@
 								target="_blank">
 								<div class="grid-box">
 									Regelverk
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:543dde0c-c349-4b87-8e17-2bd95f291863/"
 								target="_blank">
 								<div class="grid-box">
 									Databaser
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:9b328b18-c4d4-446c-a3a4-b69dccecda45/"
 								target="_blank">
 								<div class="grid-box">
 									Prototyping
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
 								target="_blank">
 								<div class="grid-box">
 									Dokumentasjon
+									<img class="ext-icon" src="/resources/images/external.svg">
 								</div>
 							</a>
 							<a href="examples/environment.html">
