--- a/vg1/index.html
+++ b/vg1/index.html
@@ -59,6 +59,7 @@
 	<main>
 		<div>
 			<h1 class="subjectHeader">Vg1 Konseptutvikling og programmering</h1>
+			<h1>Tema</h1>
 
 			<div class="grid-container">
 				<div>
@@ -126,49 +127,14 @@
 							</a>
 						</div>
 					</div>
-					<div class="subheader task-grid">
+
+
+
+					<div class="subheader task-grid" style="display: none;">
 						<div class="blue-box">
 							<h2>Innleveringer</h2>
 							<ul class="exer">
-								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f"
-										target="_blank">01 - Nettbutikk</a>
-								</li>
-								<hr />
-								<li>
-									<a
-										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EStVw5MTWKlJgxv-xDLX3zMBB4Tr22-xNnA2XufDsExHtA?e=XlBmsy">02
-										- Nettside for IM</a>
-								</li>
-								<hr />
-								<li>
-									<a
-										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EeVHmhdDHdxNhk-4hmaydoYBLEqcNYzPOJw3Vg-DIldSnQ?e=hcBrAa">03
-										- Min portefølje</a>
-								</li>
-								<hr />
-								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ERUyDkYiWS9GqxAntsrn5qYBMhpffLJ4eZOOH9F0jVyumA?e=mq0fvu"
-										target="_blank">04 - Interaktiv historie</a>
-								</li>
-								<hr />
-								<li>
-									<a
-										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ETp8nOMKChpNsMNw8b_ao-wB2XaoOzEj6kSeVPNlb65kSA?e=aOdUg4">05
-										- Power Apps</a>
-								</li>
-								<hr />
-								<li>
-									<a
-										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ETp8nOMKChpNsMNw8b_ao-wB2XaoOzEj6kSeVPNlb65kSA?e=aOdUg4">06
-										- Valfri oppgåve</a>
-								</li>
-								<hr />
-								<li>
-									<a
-										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EV2S2_qavlVGrQ4j8C9cosoBo0TTx25Gl0E3T17n7xSVxg?e=Akwx3o">07
-										- Web API</a>
-								</li>
+
 							</ul>
 						</div>
 						<div class="blue-box">
@@ -208,9 +174,10 @@
 						</div>
 
 					</div>
+
 				</div>
-				<div>
-					<div class="blue-box links-right">
+				<div class="links-right">
+					<div class="blue-box">
 						<h2>Lenker:</h2>
 						<ul>
 							<li>
@@ -230,7 +197,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="blue-box links-right">
+					<div class="blue-box">
 						<h2>!Viktig å huske på:!</h2>
 						<ul>
 							<li>
