--- a/vg2/index.html
+++ b/vg2/index.html
@@ -27,24 +27,8 @@
 				<span class="nav-item">
 					<a href="/vg1/index.html">Vg1</a>
 				</span>
-				<span class="nav-item dropdown"><a href="/vg2/index.html">Vg2</a>
-					<i class="fa fa-caret-down"></i>
-					<div class="dropdown-content">
-						<a href="/vg2/web.html">HTML / CSS / JS</a>
-						<a href="#">C# </a>
-						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
-							target="_blank">Python</a>
-						<a href="/vg2/examples/database.html">Databasar</a>
-						<a href="https://ndla.no/subject:f41eadfa-0749-4ab4-bc17-a500adad38b8/topic:b560d9d8-e4b1-4f28-b171-9febe1b3c42e/"
-							target="_blank">Personvern</a>
-						<a href="/vg2/examples/cookies.html">Cookies</a>
-						<a href="/vg2/examples/environment.html">Utviklingsmiljø</a>
-						<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
-							target="_blank">Dokumentasjon </a>
-						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
-							target="_blank">Universell utforming</a>
-						<a href="/vg2/examples/versioncontrol.html">Versjonskontroll</a>
-					</div>
+				<span class="nav-item dropdown">
+					<a href="/vg2/index.html">Vg2</a>
 				</span>
 				</span>
 				<span class="nav-item">
@@ -60,7 +44,57 @@
 	</div>
 	<main>
 		<h1 class="subjectHeader">Vg2 Utvikling</h1>
-
+		<div class="yearplan-container">
+			<h1>Årsplan</h1>
+			<div>
+				<div class="yearplan">
+					<div class="period">
+						<h3>Fram til haustferien</h3>
+						<div>
+							<ul>
+								<li>Relasjonsdatabasar SQL</li>
+								<li><a href="https://www.youtube.com/watch?v=123G5dVPGvA">Kalenderapplikasjon i C#</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="period">
+						<h3>Haustferie - terminslutt</h3>
+						<div>
+							<ul>
+								<li>IM App - Ionic React</li>
+							</ul>
+						</div>
+					</div>
+					<div class="period">
+						<h3>Terminsstart - vinterferie</h3>
+						<div>
+							<ul>
+								<li>Forum-applikasjon</li>
+								<li>SQLite / JS</li>
+							</ul>
+						</div>
+					</div>
+				
+					<div class="period">
+						<h3>Vinterferie - påske</h3>
+						<div>
+							<ul>
+								<li></li>
+							</ul>
+						</div>
+					</div>
+					<div class="period">
+						<h3>påske - sommer</h3>
+						<div>
+							<ul>
+								<li>Repetisjon</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<h1>Tema</h1>
 		<div>
 			<div class="grid-container">
 				<div>
@@ -69,11 +103,6 @@
 							<a href="/vg2/web.html">
 								<div class="grid-box">
 									Webutvikling
-								</div>
-							</a>
-							<a href="">
-								<div class="grid-box">
-									C#
 								</div>
 							</a>
 							<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
