--- a/vg1/index.html
+++ b/vg1/index.html
@@ -127,7 +127,14 @@
 							</a>
 						</div>
 					</div>
-
+					<div class="subheader task-grid">
+						<div class="blue-box">
+							<h2>Eksempler frå øktene</h2>
+								<ul class="exer">
+										<li><a href="classes/230823.html">23.08.23 - HTML tagger</a>. <a href="https://github.com/stineIM/stineIM.github.io/blob/master/vg1/classes/230823.html"><img src="/resources/images/github-mark.png" width="20px"></a></li>
+								</ul>
+						</div>
+					</div>
 
 
 					<div class="subheader task-grid" style="display: none;">
