added solutions folder

--- a/vg2/index.html
+++ b/vg2/index.html
@@ -44,6 +44,7 @@
 	</div>
 	<main>
 		<h1 class="subjectHeader">Vg2 Utvikling</h1>
+		<!--
 		<div class="yearplan-container">
 			<h1>Årsplan</h1>
 			<div>
@@ -94,6 +95,7 @@
 				</div>
 			</div>
 		</div>
+		-->
 		<h1>Tema</h1>
 		<div>
 			<div class="grid-container">
@@ -157,6 +159,7 @@
 					</div>
 					<div class="subheader task-grid">
 						<div>
+							<!--
 							<div class="blue-box">
 								<h2>Kompetansemål</h2>
 								<ul>
@@ -197,73 +200,29 @@
 									</li>
 								</ul>
 							</div>
-						</div>
-
-						<div>
+							-->
 							<div class="blue-box">
 								<h2>Innleveringer</h2>
 								<ul class="exer">
 									<li>
 										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EQE1j2wDCvNJtTDbTbe-7IABpPRRTppxrp37QISC1APhjg?e=YczkMx"
-											target="_blank">01 - Databasar
+											target="_blank">01 - Gjettespel
 										</a>
 									</li>
 									<hr />
-									<li>
-										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EQ9-y9NBC91OsY5Huq2_UmoBC0bxOPR7TkhwxYEEz7qCQA?e=aDvFEV"
-											target="_blank">02 - Webapplikasjonar og databasar
-										</a>
-									</li>
-									<hr />
-									<li>
-										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EbULk8Sv7CRJtMvAIEjrOBIBSmQiYtD0zEBSHpSOw7mTwQ?e=6ygSm9"
-											target="_blank"> 03 - Power Apps
-										</a>
-									</li>
-									<hr />
-									<li>
-										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EfVqivNggQtAlIr_DMqCWVwBEfvLlk4RMxWxlI2Pmg-VXA?e=PBdcwj"
-											target="_blank">04 - Spel
-										</a>
-									</li>
-									<hr />
-									<li>
-										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EfxZH9BkgRxBgOsneDSuRoIBDxIr130rT2iwT-tvY4bYoQ?e=grlpEh"
-											target="_blank">05 - Gruppeoppgåve - Digitale truslar
-										</a>
-									</li>
-									<hr />
-									<li>
-										<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ESofSXzcMGlBi15i8jskX0kBP38mooTOuqpqizeTnKb15Q?e=8SCnIC"
-											target="_blank"> 06 - IM Chat
-										</a>
-									</li>
+									
 								</ul>
-							</div>
-							<div class="blue-box">
-								<h2>Øvingsoppgåver</h2>
-								<ul class="exer">
-									<li>
-										<a href="/vg1/exercises/ex1.html">Øving JavaScript</a>
-									</li>
-									<hr />
-
-									<li>
-										<a
-											href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e08eecc8-5e7e-4b85-9876-dfc5d1f3d920/resource:113f0fc7-8d03-4564-b94c-5282ec374929">Øving
-											JavaScript - NDLA</a>
-									</li>
-									<hr />
-									<li>
-										<a
-											href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/">Øving
-											Python</a>
-									</li>
-								</ul>
-
-
 							</div>
 						</div>
+						<div class="blue-box">
+							<h2>Løysningsforslag</h2>
+							<ul class="exer">
+								<li>
+									<a href="">01 - Gjettespel</a>
+								</li>
+							</ul>
+						</div>
+						
 					</div>
 				</div>
 				<div>
