--- a/vg1/examples/html.html
+++ b/vg1/examples/html.html
@@ -313,44 +313,44 @@
 							<h2>Containere og &lt;div>-taggen</h2>
 						</div>
 						<div class="subjectBox">
-							<a href="https://www.w3schools.com/html/html_links.asp" target="_blank">
+							<p><span class="code">&lt;div></span> taggen blir brukt som ein oppdeling (division) av HTML kode. </p>
+							<p>Den kan innehalde fleire <span class="code">&lt;div></span> element, bilete (<span class="code">&lt;img></span>), lenker (<span class="code">&lt;a></span>) eller andre HTML element.  </p>
+							<a href="https://www.w3schools.com/tags/tag_div.ASP" target="_blank">
 								<div class="linkBox">
 									w3schools
 								</div>
 							</a>
-							<h2>Sorterte lister (ordered lists, <span class="code"> &lt;ol></span>): </h2>
-							<p><span class="code">&lt;ol></span> </p>
-							<p><span class="code">&emsp;&lt;li> Forrett &lt;/li></span> </p>
-							<p><span class="code">&emsp;&lt;li> Hovedrett &lt;/li></span> </p>
-							<p><span class="code">&emsp;&lt;li> Dessert &lt;/li></span> </p>
-							<p><span class="code">&lt;/ol></span> </p>
+							<h2>Eksempel:  </h2>
+							<p><span class="code">&lt;div></span> </p>
+							<p><span class="code">&emsp;&lt;div> Forrett &lt;/div></span> </p>
+							<p><span class="code">&emsp;&lt;div> Hovedrett &lt;/div></span> </p>
+							<p><span class="code">&emsp;&lt;div> Dessert &lt;/div></span> </p>
+							<p><span class="code">&lt;/div></span> </p>
 							<br>
 							<h3>Resultat: </h3>
 	
-							<ol>
-								<li>Forrett</li>
-								<li>Hovedrett</li>
-								<li>Dessert</li>
-							</ol>
-	
-							<h2>Usorterte lister (unordered lists, <span class="code"> &lt;ul></span>): </h2>
-							<p><span class="code">&lt;ul></span> </p>
-							<p><span class="code">&emsp;&lt;li> Teknologiforståing &lt;/li></span> </p>
-							<p><span class="code">&emsp;&lt;li> Konseptutvikling og programmering &lt;/li></span> </p>
-							<p><span class="code">&emsp;&lt;li> Produksjon og historieforteljing &lt;/li></span> </p>
-							<p><span class="code">&lt;/ul></span> </p>
+							<div>
+								<div>Forrett</div>
+								<div>Hovedrett</div>
+								<div>Dessert</div>
+							</div>
+
+							<h2>Eksempel 2:  </h2>
+							<p><span class="code">&lt;div></span> </p>
+							<p><span class="code">&emsp;&lt;img src="cat.png" /></span> </p>
+							<p><span class="code">&emsp;&lt;h2> Dette er katten min &lt;/h2></span> </p>
+							<p><span class="code">&emsp;&lt;p> Ho likar å fange fuglar. &lt;/p></span> </p>
+							<p><span class="code">&lt;/div></span> </p>
 							<br>
 							<h3>Resultat: </h3>
 	
-							<ul>
-								<li>Teknologiforståing</li>
-								<li>Konseptutvikling og programmering</li>
-								<li>Produksjon og historieforteljing</li>
-							</ul>
-	
-							<p>&lt;ol> og &lt;ul> fortel kva for liste det er snakk om</p>
-							<p>&lt;li> Er list-item, altså kvar punkt i lista. </p>
-							<p>Dette kan vere tekst, bilete, tal andre HTML element</p>
+							<div>
+								<img style="width: 200px;" src="/resources/images/Cat_Laptop_-_Idil_Keysan_-_Wikimedia_Giphy_stickers_2019.png">
+								<h2>Dette er katten min. </h2>
+								<p>Ho likar å fange fuglar.</p>
+							</div>
+
+							<a href="css.html#divs">Styling av <span class="code">&lt;div></span> element</a>
 						</div>
 					</div>
 	
