--- a/vg2/index.html
+++ b/vg2/index.html
@@ -218,7 +218,7 @@
 							<h2>Løysningsforslag</h2>
 							<ul class="exer">
 								<li>
-									<a href="">01 - Gjettespel</a>
+									<a href="https://github.com/stineIM/vg2solutions/blob/main/01gjettelek.cs" target="_blank">01 - Gjettespel</a>
 								</li>
 							</ul>
 						</div>
