--- a/vg1/examples/css.html
+++ b/vg1/examples/css.html
@@ -164,88 +164,106 @@
 						</div>
 					</div>
 
-					<div class="subject" id="links">
+					<div class="subject" id="divs">
 						<div class="subjectTitle">
-							<h1>Grid-layout</h1>
+							<h1>Styling av &lt;div></h1>
 						</div>
 						<div class="subjectBox">
-							<a href="https://www.w3schools.com/css/css_grid.asp" target="_blank">
-								<div class="linkBox">
-									w3schools
-								</div>
-							</a>
-							<h2>HTML:</h2>
-							<img src="../../resources/images/exGrid2.JPG">
-							<h2>CSS:</h2>
-							<img src="../../resources/images/exGrid.JPG">
-							<h2>Resultat: </h2>
-							<img src="../../resources/images/exGrid3.JPG">
-
-							<p> For å lage en grid, treng ein eit <span class="code">&lt;div></span> element. </p>
-							<p> Dette må ein sette css til å vere <span class="code">display: grid</span></p>
-							<p> Ein må også definere antall kolonner og evt rader.</p>
-							<p> For å gjere det enkelt, definerer me <span class="code">grid-template-columns</span></p>
-							<p> Denne kan man sette til å vere for eksempel: <span class="code">grid-template-columns:
-									auto auto auto;</span></p>
-							<p> Då vil me få tre kolonner me kan legge til informasjon i. For eksempel bilde / tekst /
-								lenker etc.</p>
-							<p> Desse kolonnene vil automatisk angi størrelse etter kva innhaldet treng.</p>
-							<p> Me kan også definere størrelsen til kolonnene. </p>
-							<p> Denne kan man sette til å vere for eksempel: <span class="code">grid-template-columns:
-									20% 50% 30%;</span></p>
-							<p> I dette tilfelle vil me få ei kolonne som er 20% av bredden på "hoved-&lt;div>
-								elementet. Ei kolonne på 50% og til slutt ei på 30%. </p>
-							<p> Me kan ha færre eller fleire kolonner, alt etter kva me treng. Men maks bredde kan vere
-								100%</p>
-							<h2>Eksempel:</h4>
-								<div class="grid-container-example">
-									<div class="grid-item-example">1</div>
-									<div class="grid-item-example">2</div>
-									<div class="grid-item-example">3</div>
-									<div class="grid-item-example">4</div>
-									<div class="grid-item-example">5</div>
-									<div class="grid-item-example">6</div>
-									<div class="grid-item-example">7</div>
-									<div class="grid-item-example">8</div>
-									<div class="grid-item-example">9</div>
-								</div>
-								<h2>Kode:</h2>
-								<p class="code">&lt;style> </p>
-								<p class="code">&emsp;.grid-container { </p>
-								<p class="code">&emsp;&emsp;display: grid; </p>
-								<p class="code">&emsp;&emsp;grid-template-columns: auto auto auto;</p>
-								<p class="code">&emsp;&emsp;background-color: #2196F3; </p>
-								<p class="code">&emsp;&emsp;padding: 10px;</p>
-								<p class="code">&emsp;}</p>
-								<p class="code">&emsp;.grid-item { </p>
-								<p class="code">&emsp;&emsp;background-color: rgba(255, 255, 255, 0.8); </p>
-								<p class="code">&emsp;&emsp;border: 1px solid rgba(0, 0, 0, 0.8);</p>
-								<p class="code">&emsp;&emsp;padding: 20px; </p>
-								<p class="code">&emsp;&emsp;font-size: 30px;</p>
-								<p class="code">&emsp;&emsp;text-align: center;</p>
-								<p class="code">&emsp;}</p>
-								<p class="code">&lt;/style</p>
-								<p class="code">&lt;div class="grid-container">
-								<p class="code">&emsp;&lt;div class="grid-item"> 1 &lt;/div></p>
-								<p class="code">&emsp;&lt;div class="grid-item"> 2 &lt;/div></p>
-								<p class="code">&emsp;&lt;div class="grid-item"> 3 &lt;/div></p>
-								<p class="code">&emsp;&lt;div class="grid-item"> 4 &lt;/div></p>
-								<p class="code">&emsp;&lt;div class="grid-item"> 5 &lt;/div></p>
-								<p class="code">&emsp;&lt;div class="grid-item"> 6 &lt;/div></p>
-								<p class="code">&emsp;&lt;div class="grid-item"> 7 &lt;/div></p>
-								<p class="code">&emsp;&lt;div class="grid-item"> 8 &lt;/div></p>
-								<p class="code">&emsp;&lt;div class="grid-item"> 9 &lt;/div></p>
-
-								<p class="code">&lt;/div></p>
-
+							<p>padding</p>
+							<p>margin</p>
+							<p>border</p>
+							<p>border-radius</p>
+							<p>height</p>
+							<p>width</p>
+							<p>color</p>
+							<p>background-color</p>
+							<p></p>
 
 						</div>
+					</div>
+
+				<div class="subject" id="grid">
+					<div class="subjectTitle">
+						<h1>Grid-layout</h1>
+					</div>
+					<div class="subjectBox">
+						<a href="https://www.w3schools.com/css/css_grid.asp" target="_blank">
+							<div class="linkBox">
+								w3schools
+							</div>
+						</a>
+						<h2>HTML:</h2>
+						<img src="../../resources/images/exGrid2.JPG">
+						<h2>CSS:</h2>
+						<img src="../../resources/images/exGrid.JPG">
+						<h2>Resultat: </h2>
+						<img src="../../resources/images/exGrid3.JPG">
+
+						<p> For å lage en grid, treng ein eit <span class="code">&lt;div></span> element. </p>
+						<p> Dette må ein sette css til å vere <span class="code">display: grid</span></p>
+						<p> Ein må også definere antall kolonner og evt rader.</p>
+						<p> For å gjere det enkelt, definerer me <span class="code">grid-template-columns</span></p>
+						<p> Denne kan man sette til å vere for eksempel: <span class="code">grid-template-columns:
+								auto auto auto;</span></p>
+						<p> Då vil me få tre kolonner me kan legge til informasjon i. For eksempel bilde / tekst /
+							lenker etc.</p>
+						<p> Desse kolonnene vil automatisk angi størrelse etter kva innhaldet treng.</p>
+						<p> Me kan også definere størrelsen til kolonnene. </p>
+						<p> Denne kan man sette til å vere for eksempel: <span class="code">grid-template-columns:
+								20% 50% 30%;</span></p>
+						<p> I dette tilfelle vil me få ei kolonne som er 20% av bredden på "hoved-&lt;div>
+							elementet. Ei kolonne på 50% og til slutt ei på 30%. </p>
+						<p> Me kan ha færre eller fleire kolonner, alt etter kva me treng. Men maks bredde kan vere
+							100%</p>
+						<h2>Eksempel:</h4>
+							<div class="grid-container-example">
+								<div class="grid-item-example">1</div>
+								<div class="grid-item-example">2</div>
+								<div class="grid-item-example">3</div>
+								<div class="grid-item-example">4</div>
+								<div class="grid-item-example">5</div>
+								<div class="grid-item-example">6</div>
+								<div class="grid-item-example">7</div>
+								<div class="grid-item-example">8</div>
+								<div class="grid-item-example">9</div>
+							</div>
+							<h2>Kode:</h2>
+							<p class="code">&lt;style> </p>
+							<p class="code">&emsp;.grid-container { </p>
+							<p class="code">&emsp;&emsp;display: grid; </p>
+							<p class="code">&emsp;&emsp;grid-template-columns: auto auto auto;</p>
+							<p class="code">&emsp;&emsp;background-color: #2196F3; </p>
+							<p class="code">&emsp;&emsp;padding: 10px;</p>
+							<p class="code">&emsp;}</p>
+							<p class="code">&emsp;.grid-item { </p>
+							<p class="code">&emsp;&emsp;background-color: rgba(255, 255, 255, 0.8); </p>
+							<p class="code">&emsp;&emsp;border: 1px solid rgba(0, 0, 0, 0.8);</p>
+							<p class="code">&emsp;&emsp;padding: 20px; </p>
+							<p class="code">&emsp;&emsp;font-size: 30px;</p>
+							<p class="code">&emsp;&emsp;text-align: center;</p>
+							<p class="code">&emsp;}</p>
+							<p class="code">&lt;/style</p>
+							<p class="code">&lt;div class="grid-container">
+							<p class="code">&emsp;&lt;div class="grid-item"> 1 &lt;/div></p>
+							<p class="code">&emsp;&lt;div class="grid-item"> 2 &lt;/div></p>
+							<p class="code">&emsp;&lt;div class="grid-item"> 3 &lt;/div></p>
+							<p class="code">&emsp;&lt;div class="grid-item"> 4 &lt;/div></p>
+							<p class="code">&emsp;&lt;div class="grid-item"> 5 &lt;/div></p>
+							<p class="code">&emsp;&lt;div class="grid-item"> 6 &lt;/div></p>
+							<p class="code">&emsp;&lt;div class="grid-item"> 7 &lt;/div></p>
+							<p class="code">&emsp;&lt;div class="grid-item"> 8 &lt;/div></p>
+							<p class="code">&emsp;&lt;div class="grid-item"> 9 &lt;/div></p>
+
+							<p class="code">&lt;/div></p>
+
 
 					</div>
 
 				</div>
+
 			</div>
-		</main>
+	</div>
+	</main>
 	</div>
 	<footer>
 		<p>&#169; <span id="year"></span> Stine Jonassen Føyen </p>
